--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Elmenus</string>
+    <string name="message_error_no_internet">Please check your internet connection</string>
+    <string name="something_went_wrong">Something went wrong, please try again</string>
 </resources>
